--- a/Telas/Inicial.html
+++ b/Telas/Inicial.html
@@ -52,10 +52,24 @@
             </nav>
         </div>
     </header>
-    <br><br><br><br>
+    <br><br><br>
+    <div style="width: 100%; height: 450px; background-image: url(../images/fundo-1.png)">
+        <a href="#" class="btn btn-outline-light" style="position: relative; left: 80%;">Cadastre Seu trabalho</a>
+        <div class="wrap">
+                <div class="search">
+                   <input type="text" class="searchTerm" placeholder="What are you looking for?">
+                   <button type="submit" class="searchButton">
+                     <i class="fa fa-search"></i>
+                  </button>
+                </div>
+             </div>
+    </div>
     <table style="margin-left: 7%;">
         <tr>
-            <td style="padding: 0px 20px 0px 20px">
+            <h4 style='text-align: center;'>Categorias em alta</h4>
+        </tr>
+        <tr>
+            <td style="padding: 0% 5% 0% 5%">
             <div class="card" style="width: 14rem;">
                 <img src="../images/ferramentas.jpg" class="card-img-top" alt="..." style='height: 12rem;'>
                 <div class="card-body">
