--- a/Telas/Inicial.html
+++ b/Telas/Inicial.html
@@ -26,35 +26,38 @@
 </head>
 
 <body>
-    <header id="navigation" class="fixed-top justify-content-end" style="background-color: #011E2E;">
-        <div class="container">
-            <!--Navbar-->
-            <nav class="navbar navbar-expand-lg navbar-dark bg-#011E2E">
-                <a class="navbar-brand" href="Inicial_page.html">
-                    <img src="../images/Logo.png" style="width: 120px; height: 45px; margin: 0%;">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="Inicial_page.html">Serviços</a>
+        <header id="navigation" class="fixed-top justify-content-end" style="background-color: #011E2E;">
+                <div class="container">
+                    <!--Navbar-->
+                    <nav class="navbar navbar-expand-lg navbar-dark bg-#011E2E">
+                        <a class="navbar-brand" href="Inicial_page.html">
+                            <img src="../images/Logo.png" style="width: 120px; height: 45px; margin: 0%;">
+                        </a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+        
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav mr-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="Serviços.html">Serviços</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="Cadastro-serviço.html">Como funciona</a>
+                                </li>
+                        <li>
+                                <a href="Cadastro-serviço.html" class="btn btn-outline-light" style="position: absolute; left: 70%;">Cadastre Seu trabalho</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Cadastro-serviço.html">Como funciona</a>
+                        <li>
+                                <a href="Login.html" class="btn btn-outline-primary" style="position: absolute; left: 90%;">Entrar</a>
                         </li>
-                <li>
-                        <a href="#" class="btn btn-outline-light" style="position: absolute; left: 82%;">Cadastre Seu trabalho</a>
-                </li>
-                    </ul>
+                            </ul>
+                        </div>
+                    </nav>
                 </div>
-            </nav>
-        </div>
-    </header>
+            </header>
     <br><br>
     <div style="width: 100%; height: 450px; background-image: url(../images/fundo-1.png)">
         <div class="wrap">
@@ -145,28 +148,30 @@
         </tr>
     </table>
     <div>
+        <br>
         <h2 style="text-align: center">Como funciona?</h2>
-        <table>
-            <tr>
-                <td>BUSQUE</td>
-                <td>CATÁLOGO</td>
-                <td>CONTRATO</td>
-                <td>ACEITAR</td>
-                <td>AVALIE</td>
+        <br>
+        <table style="margin: 0% 7% 0% 7%">
+            <tr style="text-align: center">
+                <td><p style="margin-left: 7%">BUSQUE</p></td>
+                <td><p style="margin-left: 10%">CATÁLOGO</p></td>
+                <td><p style="margin-left: 7%">CONTRATO</p></td>
+                <td><p>ACEITAR</p></td>
+                <td><p style="margin-left: 7%">AVALIE</p></td>
             </tr>
             <tr>
-                <td><img src="../images/"></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td><img src="../images/people.png" class="img1" style="margin-right: 100px"></td>
+                <td><img src="../images/catalogo.png" class="img1" style="margin-right: 100px"></td>
+                <td><img src="../images/comente.png" class="img1" style="margin-right: 100px"></td>
+                <td><img src="../images/confirma.png" class="img1" style="margin-right: 100px"></td>
+                <td><img src="../images/avalia.png" class="img1" style="margin-right: 100px"></td>
             </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+            <tr style="text-align: center;">
+                <td style="font-size:14px; padding: 0% 1% 0% 1%">Busque o profissional ideal para você estabelecendo filtros de busca.</td>
+                <td style="font-size:14px">Observe o portfolio do profissional para ver se est’a de acordo com o que busca .</td>
+                <td style="font-size:14px; padding: 0% 1% 0% 1% ">Entre em contato com o profissional pelo site para estabelecer maiores detalhes sobre o trabalho</td>
+                <td style="font-size:14px; padding: 0% 1% 0% 1%">Pode realizar o pagamento antes ou depois do trabalho, diretamente como profissional ou pelo site de acordo com o que necessitar</td>
+                <td style="font-size:14px; padding: 0% 1% 0% 1%">Publique seu depoimento na página do profissional e avalie otrabalho para contribuir para futuros clientes</td>
             </tr>
         </table>
     </div>
