--- a/Telas/Serviços.html
+++ b/Telas/Serviços.html
@@ -4,8 +4,11 @@
 <head>
     <title>Inicial</title>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="../css/style.css" />
     <script type="text/javascript" src="../javascript/IServices.js"></script>
+    <script src="https://kit.fontawesome.com/10a7600da8.js" crossorigin="anonymous"></script>
 
     <!-- Bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -24,36 +27,38 @@
 
 
 <body>
-
-    <header id="navigation" class="fixed-top justify-content-end" style="background-color: #011E2E;">
-        <div class="container">
-            <!--Navbar-->
-            <nav class="navbar navbar-expand-lg navbar-dark bg-#011E2E">
-                <a class="navbar-brand" href="Inicial_page.html">
-                    <img src="../images/Logo.png" style="width: 120px; height: 45px; margin: 0%;">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link " href="Inicial_page.html">Contrate um serviço</a>
+        <header id="navigation" class="fixed-top justify-content-end" style="background-color: #011E2E;">
+                <div class="container">
+                    <!--Navbar-->
+                    <nav class="navbar navbar-expand-lg navbar-dark bg-#011E2E">
+                        <a class="navbar-brand" href="Inicial_page.html">
+                            <img src="../images/Logo.png" style="width: 120px; height: 45px; margin: 0%;">
+                        </a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+        
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav mr-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="Serviços.html">Serviços</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="Cadastro-serviço.html">Como funciona</a>
+                                </li>
+                        <li>
+                                <a href="Cadastro-serviço.html" class="btn btn-outline-light" style="position: absolute; left: 70%;">Cadastre Seu trabalho</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Cadastro-serviço.html">Registre seu trabalho</a>
+                        <li>
+                                <a href="Login.html" class="btn btn-outline-primary" style="position: absolute; left: 90%;">Entrar</a>
                         </li>
-                    </ul>
-                    <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">
-                        <a class="nav-link" href="Login.html">Acessar</a>
-                    </button>
+                            </ul>
+                        </div>
+                    </nav>
                 </div>
-            </nav>
-        </div>
-    </header><br><br><br>
+            </header><br><br><br><br><Br>
 
     <div class="container">
         <!--Cads das categorias-->
@@ -61,54 +66,32 @@
         <!--Botstrap Theme-->
         <!-- Page Content -->
         <div class="container">
-
             <div class="row">
-
-                <div class="col-lg-3">
-
-                    <h1 class="my-4">O que está procurando?</h1>
-                    <div class="list-group">
+                <div class="col-lg-12">
+                        <h1 style='text-align: center'>Encontre o seu Serviço</h1>
+                    <div class="list-group" style="width: 20%">
+                        <h5>Principais categorias</h5>
                         <a href="#" class="list-group-item">Costura</a>
                         <a href="#" class="list-group-item">Encanamento</a>
                         <a href="#" class="list-group-item">Marcenaria</a>
                         <a href="#" class="list-group-item">Eletricista</a>
                         <a href="#" class="list-group-item">Pintura</a>
                     </div>
-
-                </div>
-                <!-- /.col-lg-3 -->
-
-                <div class="col-lg-9">
-
-                    <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
-                        <!--Grid row-->
-                        <div class="row">
-                            <!--Grid column-->
-                            <div class="col-md-12 mb-4">
-                                <!--Card-->
-                                <div class="card card-cascade narrower">
-                                    <!--Card content-->
-                                    <div class="card-body card-body-cascade text-center">
-
-                                        <!--Google map-->
-                                        <div id="map-container-google-9" class="z-depth-1-half map-container-5"
-                                            style="height: 300px">
-                                            <iframe
-                                                src="https://maps.google.com/maps?q=Madryt&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                                                frameborder="0" style="border:0" allowfullscreen></iframe>
-                                        </div>
-                                    </div>
-                                    <!--/.Card content-->
-                                </div>
-                                <!--/.Card-->
+                    <div class="wrap2" style="width: 70%;">
+                            <div class="search2">
+                               <input type="text" class="searchTerm" placeholder="O que está procurando?">
+                               <button type="submit" class="searchButton">
+                                 <i class="fa fa-search"></i>
+                              </button>
                             </div>
-                            <!--Grid column-->
-                        </div>
-                        <!--Grid row-->
-                    </div>
-
+                         </div>
+                    <br>
+                    <h3 style='text-align: center'>Profissionais em alta</h3>
+                </div>
+                <br>
+                <!-- /.col-lg-3 -->
+                <!--<h3 style='text-align: center'>Profissionais em alta</h3> -->
                     <div class="row">
-
                         <!--Card-->
                         <div class="col-lg-4 col-md-6 mb-4">
                             <div class="card h-100">
@@ -352,77 +335,100 @@
         </div>
         <!-- /.container -->
     </div>
+
+    <div class="col-lg-9">
+        <h3 style="text-align: center; margin-left:35%">Encontre seu serviço no mapa!</h3>
+
+            <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
+                <!--Grid row-->
+                <div class="row">
+                    <!--Grid column-->
+                    <div class="col-md-12 mb-4">
+                        <!--Card-->
+                        <div class="card card-cascade narrower" style="position: relative; left: 17%">
+                            <!--Card content-->
+                            <div class="card-body card-body-cascade text-center">
+
+                                <!--Google map-->
+                                <div id="map-container-google-9" class="z-depth-1-half map-container-5"
+                                    style="height: 300px;">
+                                    <iframe
+                                        src="https://maps.google.com/maps?q=Madryt&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                                        frameborder="0" style="border:0" allowfullscreen></iframe>
+                                </div>
+                            </div>
+                            <!--/.Card content-->
+                        </div>
+                        <!--/.Card-->
+                    </div>
+                    <!--Grid column-->
+                </div>
+                <!--Grid row-->
+            </div>
+    </div>
     <!-- Footer-->
     <footer class="page-footer font-small indigo" style="background-color: #011E2E;">
 
-        <div class="container text-center text-md-left">
-            <div class="row">
-                <div class="col-md-3 mx-auto">
-                    <!-- Links -->
-                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">TrampMe</h5>
-                    <ul class="list-unstyled">
-                        <li>
-                            <a href="#!">Quem somos?</a>
-                        </li>
-                        <li>
-                            <a href="#!">Fale conosco</a>
-                        </li>
-                        <li>
-                            <a href="#!">Vem pro TrampMe</a>
-                        </li>
-                    </ul>
+            <div class="container text-center text-md-left">
+                <div class="row">
+                    <div class="col-md-3 mx-auto">
+                        <!-- Links -->
+                        <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">TrampMe</h5>
+                        <ul class="list-unstyled">
+                            <li>
+                                <a href="#!">Quem somos?</a>
+                            </li>
+                            <li>
+                                <a href="#!">Fale conosco</a>
+                            </li>
+                            <li>
+                                <a href="#!">Vem pro TrampMe</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <hr class="clearfix w-100 d-md-none">
+                    <div class="col-md-3 mx-auto">
+                        <!-- Links 2-->
+                        <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">Como participar?</h5>
+                        <ul class="list-unstyled">
+                            <li>
+                                <a href="#!">Quais as vantagens do TrampMe?</a>
+                            </li>
+                            <li>
+                                <a href="#!">Coisa 2</a>
+                            </li>
+                            <li>
+                                <a href="#!">Coisa 3</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <hr class="clearfix w-100 d-md-none">
+                    <div class="col-md-3 mx-auto">
+                        <!-- Links dos icons -->
+                        <!-- isso aqui não está funcionando. Os ícones não aparecem-->
+                        <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">Social</h5>
+                        <ul class="list-unstyled">
+                            <li>
+                                <a class="fb-ic" style="color: #ffffff">
+                                    <i class="fab fa-facebook-square fa-lg white-text mr-md-3 mr-3 fa-2x"></i>
+                                </a>
+                                <a class="ins-ic" style="color: #ffffff">
+                                        <i class="fab fa-instagram fa-lg white-text mr-md-3 mr-3 fa-2x"> </i>
+                                    </a>
+                                    <a class="tw-ic" style="color: #ffffff">
+                                            <i class="fab fa-twitter fa-lg white-text mr-md-3 mr-3 fa-2x"> </i>
+                                        </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <hr class="clearfix w-100 d-md-none">
                 </div>
-                <hr class="clearfix w-100 d-md-none">
-                <div class="col-md-3 mx-auto">
-                    <!-- Links 2-->
-                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">Como participar?</h5>
-                    <ul class="list-unstyled">
-                        <li>
-                            <a href="#!">Quais as vantagens do TrampMe?</a>
-                        </li>
-                        <li>
-                            <a href="#!">Coisa 2</a>
-                        </li>
-                        <li>
-                            <a href="#!">Coisa 3</a>
-                        </li>
-                    </ul>
-                </div>
-                <hr class="clearfix w-100 d-md-none">
-                <div class="col-md-3 mx-auto">
-                    <!-- Links dos icons -->
-                    <!-- isso aqui não está funcionando. Os ícones não aparecem-->
-                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">Social</h5>
-                    <ul class="list-unstyled">
-                        <li>
-                            <a class="fb-ic" style="color: #ffffff">
-                                <i class="fab fa-facebook-square fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
-                            </a>
-                        </li>
-                        <br>
-                        <li>
-                            <a class="ins-ic" style="color: #ffffff">
-                                <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                            </a>
-                        </li>
-                        <br>
-                        <li>
-                            <a class="tw-ic" style="color: #ffffff">
-                                <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                            </a>
-                        </li>
-                        <!-- Acaba aqui o problema-->
-                    </ul>
-                </div>
-                <hr class="clearfix w-100 d-md-none">
             </div>
-        </div>
-        <!-- Footer Links -->
-        <div class="footer-copyright text-center py-3" style="color: #ffffff">© 2019 Copyright:
-            <a href="https://mdbootstrap.com/education/bootstrap/"> Tramp
-                Me.com</a>
-        </div>
-    </footer>
+            <!-- Footer Links -->
+            <div class="footer-copyright text-center py-3" style="color: #ffffff">© 2019 Copyright:
+                <a href="https://mdbootstrap.com/education/bootstrap/"> TrampMe.com</a>
+            </div>
+        </footer>
     <!-- Footer final-->
 </body>
 
