--- a/Telas/portfolio.html
+++ b/Telas/portfolio.html
@@ -19,29 +19,38 @@
 
 
 <body>
-    <header id="navigation" class="fixed-top justify-content-end" style="background-color: #011E2E;">
-        <div class="container">
-            <!--Navbar-->
-            <nav class="navbar navbar-expand-lg navbar-dark bg-#011E2E">
-                <a class="navbar-brand" href="#">TrampMe</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+        <header id="navigation" class="fixed-top justify-content-end" style="background-color: #011E2E;">
+                <div class="container">
+                    <!--Navbar-->
+                    <nav class="navbar navbar-expand-lg navbar-dark bg-#011E2E">
+                        <a class="navbar-brand" href="Inicial_page.html">
+                            <img src="../images/Logo.png" style="width: 120px; height: 45px; margin: 0%;">
+                        </a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
                         </button>
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="Inicial_page.html">Contrate um serviço</a>
+        
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav mr-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="Serviços.html">Serviços</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="Cadastro-serviço.html">Como funciona</a>
+                                </li>
+                        <li>
+                                <a href="Cadastro-serviço.html" class="btn btn-outline-light" style="position: absolute; left: 70%;">Cadastre Seu trabalho</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Cadastro-serviço.html">Registre seu trabalho</a>
+                        <li>
+                                <a href="Login.html" class="btn btn-outline-primary" style="position: absolute; left: 90%;">Entrar</a>
                         </li>
-                    </ul>
-                    <button class="btn btn-outline-primary my-2 my-sm-0" href="" type="submit">Acessar</button>
+                            </ul>
+                        </div>
+                    </nav>
                 </div>
-            </nav>
-        </div>
-    </header>
+            </header>
 
     <!-- Header -->
     <header class="bg-primary py-5 mb-5">
